--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
 <body>
     <div class="top-banner container">
-        <img src="img/logo_full.png" alt="arpeggio">
+        <img src="img/logofull_tr.png" alt="arpeggio">
     </div>
 
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="javascript:void(0)">
-                <img src="img/logo.png" alt="Avatar Logo" style="width:40px;" class="rounded-pill">
+                <img src="img/logo_invtr.png" alt="Avatar Logo" style="width:40px;" class="rounded-pill">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -30,16 +30,13 @@
                         <a class="nav-link" data-target="inicio" onclick="display(this)">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-target="catalogo" onclick="display(this)">catalogo</a>
+                        <a class="nav-link" data-target="ofertas" onclick="display(this)">Ofertas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-target="inicio" onclick="display(this)">Inicio</a>
+                        <a class="nav-link" data-target="guitarras" onclick="display(this)">Guitarras</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-target="inicio" onclick="display(this)">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-target="inicio" onclick="display(this)">Inicio</a>
+                        <a class="nav-link" data-target="ingresar" onclick="display(this)">Ingresar</a>
                     </li>
                 </ul>
                 <!-- <form class="d-flex">
@@ -53,22 +50,142 @@
 
     <div class="content">
 
-
         <section data-content id="inicio">
             <div class="container">
                 <h1>soy un inicio</h1>
             </div>
         </section>
 
-        <section data-content id="catalogo">
+        <section data-content id="ofertas">
             <div class="container">
-                <h1>soy un catalogo</h1>
+                <h1>soy una oferta</h1>
             </div>
         </section>
 
+        <section data-content id="guitarras">
+            <div class="container">
+                <div class="row">
+                    <div class="filter col-3">
+                        <h3 class="">Soy una side bar</h3>
+                        Filtrar por tipos de guitarras
+                        Todas
+                    </div>
 
+                    <div class="col-9">
+                        <h2>Soy el contenedor de articulos</h2>
+                        <div class="container row text-center">
+
+                            <div class="col-4 my-3">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <img src="img/1110198-1.webp" width="100%">
+                                        <p>Esta es una guitarra modelo blablabla</p>
+                                    </div>
+                                    <div class="card-footer">
+                                        <div class="row">
+                                            <div class="precio-antes col-5">$123.098</div>
+                                            <div class="precio-oferta col-7">$182.659</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-4 my-3">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <img src="img/1110198-1.webp" width="100%">
+                                        <p>Esta es una guitarra modelo blablabla</p>
+                                    </div>
+
+                                    <div class="card-footer">
+                                        <div class="row">
+                                            <div class="precio-antes col-5">$123.098</div>
+                                            <div class="precio-oferta col-7">$182.659</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-4 my-3">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <img src="img/1110198-1.webp" width="100%">
+                                        <p>Esta es una guitarra modelo blablabla</p>
+                                    </div>
+
+                                    <div class="card-footer">
+                                        <div class="row">
+                                            <div class="precio-antes col-5">$123.098</div>
+                                            <div class="precio-oferta col-7">$182.659</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-4 my-3">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <img src="img/1110198-1.webp" width="100%">
+                                        <p>Esta es una guitarra modelo blablabla</p>
+                                    </div>
+
+                                    <div class="card-footer">
+                                        <div class="row">
+                                            <div class="precio-antes col-5">$123.098</div>
+                                            <div class="precio-oferta col-7">$182.659</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-4 my-3">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <img src="img/1110198-1.webp" width="100%">
+                                        <p>Esta es una guitarra modelo blablabla</p>
+                                    </div>
+
+                                    <div class="card-footer">
+                                        <div class="row">
+                                            <div class="precio-antes col-5">$123.098</div>
+                                            <div class="precio-oferta col-7">$182.659</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-4 my-3">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <img src="img/1110198-1.webp" width="100%">
+                                        <p>Esta es una guitarra modelo blablabla</p>
+                                    </div>
+
+                                    <div class="card-footer">
+                                        <div class="row">
+                                            <div class="precio-antes col-5">$123.098</div>
+                                            <div class="precio-oferta col-7">$182.659</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                           
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <section data-content id="ingresar">
+            <div class="container">
+                <h1>soy un formulario</h1>
+            </div>
+        </section>
 
         <script src="js/sccript.js"></script>
+        <script src="js/data.js"></script>
 </body>
 
 </html>
