mejorar estilo de catalogo

--- a/index.html
+++ b/index.html
@@ -65,112 +65,148 @@
         <section data-content id="guitarras">
             <div class="container">
                 <div class="row">
-                    <div class="filter col-3">
-                        <h3 class="">Soy una side bar</h3>
-                        Filtrar por tipos de guitarras
-                        Todas
+                    <div class=" container col-md-3">
+                        <div class="filter container h-100">
+
+                            <h3 class="">Soy una side bar</h3>
+                            Filtrar por tipos de guitarras
+                            Todas
+                        </div>
                     </div>
 
                     <div class="col-9">
-                        <h2>Soy el contenedor de articulos</h2>
                         <div class="container row text-center">
+                            <h2 id="catalog-title" class="mt-2">Todas las guitarras</h2>
 
-                            <div class="col-4 my-3">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <img src="img/1110198-1.webp" width="100%">
-                                        <p>Esta es una guitarra modelo blablabla</p>
+                            <div id="items">
+
+                                <div class="col-3 my-3">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <img src="img/1110198-1.webp" width="100%">
+                                            <span>Guitarra eléctroacústica Takamine Folk GLD12E NS - Madera Clara</span>
+                                        </div>
+                                        <div class="card-footer">
+                                            <div class="row">
+                                                <div class="precio-antes col-5">$123.098</div>
+                                                <div class="precio-oferta col-7">$182.659</div>
+                                            </div>
+                                            <button class="btn btn-primary btn-sm mt-2"><i
+                                                    class="bi bi-bag"></i>Comprar</button>
+                                        </div>
                                     </div>
-                                    <div class="card-footer">
-                                        <div class="row">
-                                            <div class="precio-antes col-5">$123.098</div>
-                                            <div class="precio-oferta col-7">$182.659</div>
+                                </div>
+
+
+                                <div class="col-3 my-3">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <img src="img/1110198-1.webp" width="100%">
+                                            <span>Guitarra eléctroacústica Takamine Folk GLD12E NS - Madera Clara</span>
+                                        </div>
+                                        <div class="card-footer">
+                                            <div class="row">
+                                                <div class="precio-antes col-5">$123.098</div>
+                                                <div class="precio-oferta col-7">$182.659</div>
+                                            </div>
+                                            <button class="btn btn-primary btn-sm mt-2"><i
+                                                    class="bi bi-bag"></i>Comprar</button>
+                                        </div>
+                                    </div>
+                                </div>
+
+
+                                <div class="col-3 my-3">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <img src="img/1110198-1.webp" width="100%">
+                                            <span>Guitarra eléctroacústica Takamine Folk GLD12E NS - Madera Clara</span>
+                                        </div>
+                                        <div class="card-footer">
+                                            <div class="row">
+                                                <div class="precio-antes col-5">$123.098</div>
+                                                <div class="precio-oferta col-7">$182.659</div>
+                                            </div>
+                                            <button class="btn btn-primary btn-sm mt-2"><i
+                                                    class="bi bi-bag"></i>Comprar</button>
+                                        </div>
+                                    </div>
+                                </div>
+
+
+                                <div class="col-3 my-3">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <img src="img/1110198-1.webp" width="100%">
+                                            <span>Guitarra eléctroacústica Takamine Folk GLD12E NS - Madera Clara</span>
+                                        </div>
+                                        <div class="card-footer">
+                                            <div class="row">
+                                                <div class="precio-antes col-5">$123.098</div>
+                                                <div class="precio-oferta col-7">$182.659</div>
+                                            </div>
+                                            <button class="btn btn-primary btn-sm mt-2"><i
+                                                    class="bi bi-bag"></i>Comprar</button>
+                                        </div>
+                                    </div>
+                                </div>
+
+
+                                <div class="col-3 my-3">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <img src="img/1110198-1.webp" width="100%">
+                                            <span>Guitarra eléctroacústica Takamine Folk GLD12E NS - Madera Clara</span>
+                                        </div>
+                                        <div class="card-footer">
+                                            <div class="row">
+                                                <div class="precio-antes col-5">$123.098</div>
+                                                <div class="precio-oferta col-7">$182.659</div>
+                                            </div>
+                                            <button class="btn btn-primary btn-sm mt-2"><i
+                                                    class="bi bi-bag"></i>Comprar</button>
+                                        </div>
+                                    </div>
+                                </div>
+
+
+                                <div class="col-3 my-3">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <img src="img/1110198-1.webp" width="100%">
+                                            <span>Guitarra eléctroacústica Takamine Folk GLD12E NS - Madera Clara</span>
+                                        </div>
+                                        <div class="card-footer">
+                                            <div class="row">
+                                                <div class="precio-antes col-5">$123.098</div>
+                                                <div class="precio-oferta col-7">$182.659</div>
+                                            </div>
+                                            <button class="btn btn-primary btn-sm mt-2"><i
+                                                    class="bi bi-bag"></i>Comprar</button>
+                                        </div>
+                                    </div>
+                                </div>
+
+
+                                <div class="col-3 my-3">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <img src="img/1110198-1.webp" width="100%">
+                                            <span>Guitarra eléctroacústica Takamine Folk GLD12E NS - Madera Clara</span>
+                                        </div>
+                                        <div class="card-footer">
+                                            <div class="row">
+                                                <div class="precio-antes col-5">$123.098</div>
+                                                <div class="precio-oferta col-7">$182.659</div>
+                                            </div>
+                                            <button class="btn btn-primary btn-sm mt-2"><i
+                                                    class="bi bi-bag"></i>Comprar</button>
                                         </div>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="col-4 my-3">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <img src="img/1110198-1.webp" width="100%">
-                                        <p>Esta es una guitarra modelo blablabla</p>
-                                    </div>
 
-                                    <div class="card-footer">
-                                        <div class="row">
-                                            <div class="precio-antes col-5">$123.098</div>
-                                            <div class="precio-oferta col-7">$182.659</div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-4 my-3">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <img src="img/1110198-1.webp" width="100%">
-                                        <p>Esta es una guitarra modelo blablabla</p>
-                                    </div>
-
-                                    <div class="card-footer">
-                                        <div class="row">
-                                            <div class="precio-antes col-5">$123.098</div>
-                                            <div class="precio-oferta col-7">$182.659</div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-4 my-3">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <img src="img/1110198-1.webp" width="100%">
-                                        <p>Esta es una guitarra modelo blablabla</p>
-                                    </div>
-
-                                    <div class="card-footer">
-                                        <div class="row">
-                                            <div class="precio-antes col-5">$123.098</div>
-                                            <div class="precio-oferta col-7">$182.659</div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-4 my-3">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <img src="img/1110198-1.webp" width="100%">
-                                        <p>Esta es una guitarra modelo blablabla</p>
-                                    </div>
-
-                                    <div class="card-footer">
-                                        <div class="row">
-                                            <div class="precio-antes col-5">$123.098</div>
-                                            <div class="precio-oferta col-7">$182.659</div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-4 my-3">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <img src="img/1110198-1.webp" width="100%">
-                                        <p>Esta es una guitarra modelo blablabla</p>
-                                    </div>
-
-                                    <div class="card-footer">
-                                        <div class="row">
-                                            <div class="precio-antes col-5">$123.098</div>
-                                            <div class="precio-oferta col-7">$182.659</div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                           
                         </div>
                     </div>
 
