carga dinamica de catalogo y ofertas

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <a class="nav-link" data-target="ofertas" onclick="display(this)">Ofertas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-target="guitarras" onclick="display(this)">Guitarras</a>
+                        <a class="nav-link" data-target="catalogo" onclick="display(this)">Guitarras</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" data-target="ingresar" onclick="display(this)">Ingresar</a>
@@ -50,19 +50,15 @@
 
     <div class="content">
 
+        <!-- Inicio -->
         <section data-content id="inicio">
             <div class="container">
                 <h1>soy un inicio</h1>
             </div>
         </section>
 
-        <section data-content id="ofertas">
-            <div class="container">
-                <h1>soy una oferta</h1>
-            </div>
-        </section>
-
-        <section data-content id="guitarras">
+        <!-- Catalogo -->
+        <section data-content id="catalogo">
             <div class="container">
                 <div class="row">
                     <div class=" container col-md-3">
@@ -75,138 +71,7 @@
                     </div>
 
                     <div class="col-9">
-                        <div class="container row text-center">
-                            <h2 id="catalog-title" class="mt-2">Todas las guitarras</h2>
-
-                            <div id="items">
-
-                                <div class="col-3 my-3">
-                                    <div class="card">
-                                        <div class="card-body">
-                                            <img src="img/1110198-1.webp" width="100%">
-                                            <span>Guitarra eléctroacústica Takamine Folk GLD12E NS - Madera Clara</span>
-                                        </div>
-                                        <div class="card-footer">
-                                            <div class="row">
-                                                <div class="precio-antes col-5">$123.098</div>
-                                                <div class="precio-oferta col-7">$182.659</div>
-                                            </div>
-                                            <button class="btn btn-primary btn-sm mt-2"><i
-                                                    class="bi bi-bag"></i>Comprar</button>
-                                        </div>
-                                    </div>
-                                </div>
-
-
-                                <div class="col-3 my-3">
-                                    <div class="card">
-                                        <div class="card-body">
-                                            <img src="img/1110198-1.webp" width="100%">
-                                            <span>Guitarra eléctroacústica Takamine Folk GLD12E NS - Madera Clara</span>
-                                        </div>
-                                        <div class="card-footer">
-                                            <div class="row">
-                                                <div class="precio-antes col-5">$123.098</div>
-                                                <div class="precio-oferta col-7">$182.659</div>
-                                            </div>
-                                            <button class="btn btn-primary btn-sm mt-2"><i
-                                                    class="bi bi-bag"></i>Comprar</button>
-                                        </div>
-                                    </div>
-                                </div>
-
-
-                                <div class="col-3 my-3">
-                                    <div class="card">
-                                        <div class="card-body">
-                                            <img src="img/1110198-1.webp" width="100%">
-                                            <span>Guitarra eléctroacústica Takamine Folk GLD12E NS - Madera Clara</span>
-                                        </div>
-                                        <div class="card-footer">
-                                            <div class="row">
-                                                <div class="precio-antes col-5">$123.098</div>
-                                                <div class="precio-oferta col-7">$182.659</div>
-                                            </div>
-                                            <button class="btn btn-primary btn-sm mt-2"><i
-                                                    class="bi bi-bag"></i>Comprar</button>
-                                        </div>
-                                    </div>
-                                </div>
-
-
-                                <div class="col-3 my-3">
-                                    <div class="card">
-                                        <div class="card-body">
-                                            <img src="img/1110198-1.webp" width="100%">
-                                            <span>Guitarra eléctroacústica Takamine Folk GLD12E NS - Madera Clara</span>
-                                        </div>
-                                        <div class="card-footer">
-                                            <div class="row">
-                                                <div class="precio-antes col-5">$123.098</div>
-                                                <div class="precio-oferta col-7">$182.659</div>
-                                            </div>
-                                            <button class="btn btn-primary btn-sm mt-2"><i
-                                                    class="bi bi-bag"></i>Comprar</button>
-                                        </div>
-                                    </div>
-                                </div>
-
-
-                                <div class="col-3 my-3">
-                                    <div class="card">
-                                        <div class="card-body">
-                                            <img src="img/1110198-1.webp" width="100%">
-                                            <span>Guitarra eléctroacústica Takamine Folk GLD12E NS - Madera Clara</span>
-                                        </div>
-                                        <div class="card-footer">
-                                            <div class="row">
-                                                <div class="precio-antes col-5">$123.098</div>
-                                                <div class="precio-oferta col-7">$182.659</div>
-                                            </div>
-                                            <button class="btn btn-primary btn-sm mt-2"><i
-                                                    class="bi bi-bag"></i>Comprar</button>
-                                        </div>
-                                    </div>
-                                </div>
-
-
-                                <div class="col-3 my-3">
-                                    <div class="card">
-                                        <div class="card-body">
-                                            <img src="img/1110198-1.webp" width="100%">
-                                            <span>Guitarra eléctroacústica Takamine Folk GLD12E NS - Madera Clara</span>
-                                        </div>
-                                        <div class="card-footer">
-                                            <div class="row">
-                                                <div class="precio-antes col-5">$123.098</div>
-                                                <div class="precio-oferta col-7">$182.659</div>
-                                            </div>
-                                            <button class="btn btn-primary btn-sm mt-2"><i
-                                                    class="bi bi-bag"></i>Comprar</button>
-                                        </div>
-                                    </div>
-                                </div>
-
-
-                                <div class="col-3 my-3">
-                                    <div class="card">
-                                        <div class="card-body">
-                                            <img src="img/1110198-1.webp" width="100%">
-                                            <span>Guitarra eléctroacústica Takamine Folk GLD12E NS - Madera Clara</span>
-                                        </div>
-                                        <div class="card-footer">
-                                            <div class="row">
-                                                <div class="precio-antes col-5">$123.098</div>
-                                                <div class="precio-oferta col-7">$182.659</div>
-                                            </div>
-                                            <button class="btn btn-primary btn-sm mt-2"><i
-                                                    class="bi bi-bag"></i>Comprar</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-
+                        <div id="items" class="container row text-center">
                         </div>
                     </div>
 
@@ -214,6 +79,7 @@
             </div>
         </section>
 
+        <!--  Formulario -->
         <section data-content id="ingresar">
             <div class="container">
                 <h1>soy un formulario</h1>
@@ -222,6 +88,7 @@
 
         <script src="js/sccript.js"></script>
         <script src="js/data.js"></script>
+        <script src="js/catalog.js"></script>
 </body>
 
 </html>
