--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    
     <link rel="stylesheet" href="css/style.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    
+    <script src="js/sccript.js"></script>
+    <script src="js/data.js"></script>
+    <script src="js/catalog.js"></script>
 </head>
 
 <body>
@@ -18,13 +29,13 @@
 
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="javascript:void(0)">
+            <a class="navbar-brand" href="index.html">
                 <img src="img/logo_invtr.png" alt="Avatar Logo" style="width:40px;" class="rounded-pill">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navBar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="mynavbar">
+            <div class="collapse navbar-collapse" id="navBar">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
                         <a class="nav-link" data-target="inicio" onclick="display(this)">Inicio</a>
@@ -36,7 +47,7 @@
                         <a class="nav-link" data-target="catalogo" onclick="display(this)">Guitarras</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-target="ingresar" onclick="display(this)">Ingresar</a>
+                        <a class="nav-link" href="login.html">Ingresar</a>
                     </li>
                 </ul>
                 <!-- <form class="d-flex">
@@ -51,7 +62,7 @@
     <div class="content">
 
         <!-- Inicio -->
-        <section data-content id="inicio">
+        <section data-content id="inicio" class="d-inline">
             <div class="container">
                 <h1>soy un inicio</h1>
             </div>
@@ -79,16 +90,6 @@
             </div>
         </section>
 
-        <!--  Formulario -->
-        <section data-content id="ingresar">
-            <div class="container">
-                <h1>soy un formulario</h1>
-            </div>
-        </section>
-
-        <script src="js/sccript.js"></script>
-        <script src="js/data.js"></script>
-        <script src="js/catalog.js"></script>
 </body>
 
 </html>
