--- a/login.html
+++ b/login.html
@@ -15,9 +15,10 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    
     <script src="js/sccript.js"></script>
     <script src="js/data.js"></script>
-    <script src="js/catalog.js"></script>
+    <script src="js/login.js"></script>
 </head>
 
 <body>
