corrige navegacion forms

--- a/login.html
+++ b/login.html
@@ -76,7 +76,7 @@
                             data-val="password">
                     </div>
 
-                    <a type="menu" class="btn btn-danger" data-target="inicio" onclick="display(this)">Volver</a>
+                    <a type="menu" class="btn btn-danger" href="index.html">Volver</a>
                     <button type="submit" class="btn btn-primary">Ingresar</button>
 
                 </form>
@@ -142,7 +142,7 @@
                         <input type="password" class="form-control" id="repass" name="repass" data-val="repass">
                     </div>
 
-                    <a type="menu" class="btn btn-danger" data-target="inicio" onclick="display(this)">Volver</a>
+                    <a type="menu" class="btn btn-danger" href="index.html">Volver</a>
                     <button type="submit" class="btn btn-primary">Ingresar</button>
 
                 </form>
@@ -169,7 +169,7 @@
                             data-val="required">
                     </div>
 
-                    <a type="menu" class="btn btn-danger" data-target="inicio" onclick="display(this)">Volver</a>
+                    <a type="menu" class="btn btn-danger" href="index.html">Volver</a>
                     <button type="submit" class="btn btn-primary">Ingresar</button>
 
                 </form>
