simula submit de login

--- a/login.html
+++ b/login.html
@@ -99,7 +99,7 @@
 
                 <h3>Registrar Nuevo Usuario</h3>
 
-                <form action="submit">
+                <form action="submit" id="registerForm">
 
                     <div class="mb-3 mt-3">
                         <label for="nombre">Nombre:</label>
@@ -156,7 +156,7 @@
 
                 <h3>Recuperar Contraseña</h3>
 
-                <form action="submit">
+                <form action="submit" id="passRecoveryForm">
 
                     <div class="mb-3 mt-3">
                         <label for="rec-email">Correo:</label>
