--- a/login.html
+++ b/login.html
@@ -143,7 +143,7 @@
                     </div>
 
                     <a type="menu" class="btn btn-danger" href="index.html">Volver</a>
-                    <button type="submit" class="btn btn-primary">Ingresar</button>
+                    <button type="submit" class="btn btn-primary">Registrarse</button>
 
                 </form>
 
@@ -170,7 +170,7 @@
                     </div>
 
                     <a type="menu" class="btn btn-danger" href="index.html">Volver</a>
-                    <button type="submit" class="btn btn-primary">Ingresar</button>
+                    <button type="submit" class="btn btn-primary">Enviar</button>
 
                 </form>
 
