--- a/index.html
+++ b/index.html
@@ -36,24 +36,24 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navBar">
-                <ul class="navbar-nav mx-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" data-target="inicio" onclick="display(this)">Inicio</a>
+                <ul class="navbar-nav w-100">
+                    <li class="nav-item mx-2">
+                        <a class="nav-link" data-target="inicio" onclick="display(this)">
+                            <i class="bi bi-house mx-2"></i>Inicio</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-target="ofertas" onclick="display(this)">Ofertas</a>
+                    <li class="nav-item  mx-2">
+                        <a class="nav-link" data-target="ofertas" onclick="display(this)">
+                            <i class="bi bi-tag mx-2"></i> Ofertas</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-target="catalogo" onclick="display(this)">Guitarras</a>
+                    <li class="nav-item  mx-2">
+                        <a class="nav-link" data-target="catalogo" onclick="display(this)">
+                            <i class="bi bi-bag mx-2"></i>Guitarras</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="login.html">Ingresar</a>
+                    <li class="nav-item  mx-2 ms-auto">
+                        <a class="nav-link" href="login.html">
+                            <i class="bi bi-person mx-2"></i>Mi Cuenta</a>
                     </li>
                 </ul>
-                <!-- <form class="d-flex">
-                    <input class="form-control me-2" type="text" placeholder="Buscar">
-                    <button class="btn btn-primary" type="button">Buscar</button>
-                </form> -->
             </div>
         </div>
     </nav>
