--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                         <a class="nav-link" data-target="catalogo" onclick="display(this)">
                             <i class="bi bi-bag mx-2"></i>Guitarras</a>
                     </li>
-                    <li class="nav-item  mx-2 ms-auto">
-                        <a class="nav-link" href="login.html">
+                    <li class="nav-item mx-2 ms-auto">
+                        <a class="nav-link" data-target="login" onclick="display(this)">
                             <i class="bi bi-person mx-2"></i>Mi Cuenta</a>
                     </li>
                 </ul>
