--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    
+
     <script src="js/sccript.js"></script>
     <script src="js/data.js"></script>
     <script src="js/login.js"></script>
@@ -35,18 +35,22 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navBar">
-                <ul class="navbar-nav mx-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Inicio</a>
+                <ul class="navbar-nav w-100">
+                    <li class="nav-item mx-2">
+                        <a class="nav-link" href="index.html">
+                            <i class="bi bi-house mx-2"></i>Inicio</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-target="form-ingresar" onclick="display(this)">Ingresar</a>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link" data-target="form-ingresar" onclick="display(this)">
+                            <i class="bi bi-box-arrow-in-right mx-2"></i>Ingresar</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-target="form-registrar" onclick="display(this)">Registrarse</a>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link" data-target="form-registrar" onclick="display(this)">
+                            <i class="bi bi-person-add mx-2"></i>Registrarse</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-target="form-recuperar" onclick="display(this)">Recuperar<br>Contraseña</a>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link" data-target="form-recuperar" onclick="display(this)">
+                            <i class="bi bi-patch-question mx-2"></i>Recuperar Contraseña</a>
                     </li>
                 </ul>
             </div>
@@ -73,7 +77,7 @@
                     <div class="mb-3">
                         <label for="login-password">Contraseña:</label>
                         <input type="password" class="form-control" id="login-password" name="login-password"
-                            data-val="password">
+                            data-val="required">
                     </div>
 
                     <a type="menu" class="btn btn-danger" href="index.html">Volver</a>
@@ -134,7 +138,8 @@
 
                     <div class="mb-3">
                         <label for="reg-password">Contraseña:</label>
-                        <input type="password" class="form-control" id="reg-password" name="reg-password" data-val="password">
+                        <input type="password" class="form-control" id="reg-password" name="reg-password"
+                            data-val="password">
                     </div>
 
                     <div class="mb-3">
