--- a/user.html
+++ b/user.html
@@ -49,7 +49,7 @@
                             <i class="bi bi-bag mx-2"></i>Mis compras</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link" data-target="form-recuperar" onclick="display(this)">
+                        <a class="nav-link" href="chart.html">
                             <i class="bi bi-cart-dash mx-2"></i>Mi carrito</a>
                     </li>
                     <li class="nav-item mx-2 ms-auto">
