--- a/chart.html
+++ b/chart.html
@@ -77,7 +77,7 @@
 
                     <div class="text-end">
 
-                        <button class="btn btn-danger px-3 mx-3">Volver</button>
+                        <a  href="index.html" class="btn btn-danger px-3 mx-3">Volver</a>
                         <button type="submit" class="btn btn-success px-5">Pagar</button>
 
                     </div>
