--- a/user.html
+++ b/user.html
@@ -29,7 +29,7 @@
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="img/logo_invtr.png" alt="Avatar Logo" style="width:40px;" class="rounded-pill">
+                <img src="img/logo_invtr.png" alt="Avatar Logo" style="width:40px;" id="bar-logo" class="bar-logo-off">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navBar">
                 <span class="navbar-toggler-icon"></span>
