--- a/chart.html
+++ b/chart.html
@@ -37,17 +37,17 @@
             <div class="collapse navbar-collapse" id="navBar">
                 <ul class="navbar-nav w-100">
                     <li class="nav-item mx-2">
-                        <a class="nav-link" data-target="inicio" onclick="display(this)">
+                        <a class="nav-link" href="index.html">
                             <i class="bi bi-house mx-2"></i>Inicio</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link" data-target="perfil" onclick="display(this)">
+                        <a class="nav-link" href="user.html">
                             <i class="bi bi-person mx-2"></i>Mi perfil</a>
                     </li>
-                    <li class="nav-item mx-2">
+                    <!-- <li class="nav-item mx-2">
                         <a class="nav-link" data-target="form-registrar" onclick="display(this)">
                             <i class="bi bi-bag mx-2"></i>Mis compras</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item mx-2">
                         <a class="nav-link" data-target="chart" onclick="display(this)">
                             <i class="bi bi-cart-dash mx-2"></i>Mi carrito</a>
