ocultar carrito cuando es admin

--- a/user.html
+++ b/user.html
@@ -48,7 +48,7 @@
                         <a class="nav-link" data-target="form-registrar" onclick="display(this)">
                             <i class="bi bi-bag mx-2"></i>Mis compras</a>
                     </li> -->
-                    <li class="nav-item mx-2">
+                    <li class="nav-item mx-2" id="chart-nav">
                         <a class="nav-link" href="chart.html">
                             <i class="bi bi-cart-dash mx-2"></i>Mi carrito</a>
                     </li>
