--- a/login.html
+++ b/login.html
@@ -63,122 +63,139 @@
         <!--  Formulario Ingresar -->
         <section data-content id="form-ingresar" class="d-inline">
             <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 mx-auto">
 
-                <h3>Iniciar Sesión</h3>
+                        <h3>Iniciar Sesión</h3>
 
-                <form action="submit" id="loginForm">
+                        <form action="submit" id="loginForm">
 
-                    <div class="mb-3 mt-3">
-                        <label for="login-username">Nombre de Usuario:</label>
-                        <input type="text" class="form-control" id="login-username" name="login-username"
-                            data-val="required">
+                            <div class="mb-3 mt-3">
+                                <label for="login-username">Nombre de Usuario:</label>
+                                <input type="text" class="form-control" id="login-username" name="login-username"
+                                    data-val="required">
+                            </div>
+
+                            <div class="mb-3">
+                                <label for="login-password">Contraseña:</label>
+                                <input type="password" class="form-control" id="login-password" name="login-password"
+                                    data-val="required">
+                            </div>
+
+                            <a type="menu" class="btn btn-danger" href="index.html">Volver</a>
+                            <button type="submit" class="btn btn-primary">Ingresar</button>
+
+                        </form>
+
+                        <p>
+                            <a type="menu" class="btn mt-5 p-0" data-target="form-recuperar"
+                                onclick="display(this)">Recuperar
+                                Contraseña</a>
+                        </p>
+                        <p>
+                            <a type="menu" class="btn mt-5 p-0" data-target="form-registrar"
+                                onclick="display(this)">Crea tu
+                                cuenta</a>
+                        </p>
+
                     </div>
-
-                    <div class="mb-3">
-                        <label for="login-password">Contraseña:</label>
-                        <input type="password" class="form-control" id="login-password" name="login-password"
-                            data-val="required">
-                    </div>
-
-                    <a type="menu" class="btn btn-danger" href="index.html">Volver</a>
-                    <button type="submit" class="btn btn-primary">Ingresar</button>
-
-                </form>
-
-                <p>
-                    <a type="menu" class="btn mt-5 p-0" data-target="form-recuperar" onclick="display(this)">Recuperar
-                        Contraseña</a>
-                </p>
-                <p>
-                    <a type="menu" class="btn mt-5 p-0" data-target="form-registrar" onclick="display(this)">Crea tu
-                        cuenta</a>
-                </p>
-
-            </div>
+                </div>
         </section>
 
         <!--  Formulario Registrar-->
         <section data-content id="form-registrar">
             <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 mx-auto">
 
-                <h3>Registrar Nuevo Usuario</h3>
+                        <h3>Registrar Nuevo Usuario</h3>
 
-                <form action="submit" id="registerForm">
+                        <form action="submit" id="registerForm">
+                                <div class="mb-3 mt-3">
+                                    <label for="nombre">Nombre:</label>
+                                    <input type="text" class="form-control" id="nombre" name="nombre"
+                                        data-val="required">
+                                </div>
 
-                    <div class="mb-3 mt-3">
-                        <label for="nombre">Nombre:</label>
-                        <input type="text" class="form-control" id="nombre" name="nombre" data-val="required">
+                                <div class="mb-3 mt-3">
+                                    <label for="apepat">Apellido Paterno:</label>
+                                    <input type="text" class="form-control" id="apepat" name="apepat">
+                                </div>
+
+                                <div class="mb-3 mt-3">
+                                    <label for="apemat">Apellido Materno:</label>
+                                    <input type="text" class="form-control" id="apemat" name="apemat">
+                                </div>
+
+                                <div class="mb-3 mt-3">
+                                    <label for="direccion">Dirección:</label>
+                                    <input type="text" class="form-control" id="direccion" name="direccion"
+                                        data-val="required">
+                                </div>
+
+                                <div class="mb-3 mt-3">
+                                    <label for="reg-email">Correo:</label>
+                                    <input type="email" class="form-control" id="reg-email" name="reg-email"
+                                        data-val="email">
+                                </div>
+
+                                <div class="mb-3 mt-3">
+                                    <label for="reg-username">Nombre de Usuario:</label>
+                                    <input type="text" class="form-control" id="reg-username" name="reg-username"
+                                        data-val="username">
+                                </div>
+
+                                <div class="mb-3">
+                                    <label for="reg-password">Contraseña:</label>
+                                    <input type="password" class="form-control" id="reg-password" name="reg-password"
+                                        data-val="password">
+                                </div>
+
+                                <div class="mb-3">
+                                    <label for="repass">Repetir Contraseña:</label>
+                                    <input type="password" class="form-control" id="repass" name="repass"
+                                        data-val="repass">
+                                </div>
+
+                                <a type="menu" class="btn btn-danger" href="index.html">Volver</a>
+                                <button type="submit" class="btn btn-primary">Registrarse</button>
+                            </div>
+
+                        </form>
+
                     </div>
-
-                    <div class="mb-3 mt-3">
-                        <label for="apepat">Apellido Paterno:</label>
-                        <input type="text" class="form-control" id="apepat" name="apepat">
-                    </div>
-
-                    <div class="mb-3 mt-3">
-                        <label for="apemat">Apellido Materno:</label>
-                        <input type="text" class="form-control" id="apemat" name="apemat">
-                    </div>
-
-                    <div class="mb-3 mt-3">
-                        <label for="direccion">Dirección:</label>
-                        <input type="text" class="form-control" id="direccion" name="direccion" data-val="required">
-                    </div>
-
-                    <div class="mb-3 mt-3">
-                        <label for="reg-email">Correo:</label>
-                        <input type="email" class="form-control" id="reg-email" name="reg-email" data-val="email">
-                    </div>
-
-                    <div class="mb-3 mt-3">
-                        <label for="reg-username">Nombre de Usuario:</label>
-                        <input type="text" class="form-control" id="reg-username" name="reg-username"
-                            data-val="username">
-                    </div>
-
-                    <div class="mb-3">
-                        <label for="reg-password">Contraseña:</label>
-                        <input type="password" class="form-control" id="reg-password" name="reg-password"
-                            data-val="password">
-                    </div>
-
-                    <div class="mb-3">
-                        <label for="repass">Repetir Contraseña:</label>
-                        <input type="password" class="form-control" id="repass" name="repass" data-val="repass">
-                    </div>
-
-                    <a type="menu" class="btn btn-danger" href="index.html">Volver</a>
-                    <button type="submit" class="btn btn-primary">Registrarse</button>
-
-                </form>
-
+                </div>
             </div>
         </section>
 
         <!--  Formulario Recuperar-->
         <section data-content id="form-recuperar">
             <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 mx-auto">
+                        <h3>Recuperar Contraseña</h3>
 
-                <h3>Recuperar Contraseña</h3>
+                        <form action="submit" id="passRecoveryForm">
 
-                <form action="submit" id="passRecoveryForm">
+                            <div class="mb-3 mt-3">
+                                <label for="rec-email">Correo:</label>
+                                <input type="email" class="form-control" id="rec-email" name="rec-email"
+                                    data-val="email">
+                            </div>
 
-                    <div class="mb-3 mt-3">
-                        <label for="rec-email">Correo:</label>
-                        <input type="email" class="form-control" id="rec-email" name="rec-email" data-val="email">
+                            <div class="mb-3 mt-3">
+                                <label for="rec-username">Nombre de Usuario:</label>
+                                <input type="text" class="form-control" id="rec-username" name="rec-username"
+                                    data-val="required">
+                            </div>
+
+                            <a type="menu" class="btn btn-danger" href="index.html">Volver</a>
+                            <button type="submit" class="btn btn-primary">Enviar</button>
+
+                        </form>
+
                     </div>
-
-                    <div class="mb-3 mt-3">
-                        <label for="rec-username">Nombre de Usuario:</label>
-                        <input type="text" class="form-control" id="rec-username" name="rec-username"
-                            data-val="required">
-                    </div>
-
-                    <a type="menu" class="btn btn-danger" href="index.html">Volver</a>
-                    <button type="submit" class="btn btn-primary">Enviar</button>
-
-                </form>
-
+                </div>
             </div>
         </section>
 
